--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <section id="about" class="py-24 px-4 max-w-7xl mx-auto">
         <div class="grid md:grid-cols-2 gap-16 items-center">
             <div class="relative">
-                <img src="https://images.unsplash.com/photo-1542314831-068cd1dbfeeb?auto=format&fit=crop&q=80&w=800" 
+                <img src="main.webp" 
                      alt="Hotel Comfort" 
                      class="rounded-2xl shadow-2xl relative z-10 w-full h-[500px] object-cover">
                 <div class="absolute -bottom-6 -right-6 w-full h-full border-4 border-orange-200 rounded-2xl -z-0"></div>
